--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 body {
     background-color: #e9ebe5;
     text-align: center;
-    font-family: 'Raleway', Helvetica, sans-serif;
-  }
+}
 
 #myform {
     background-color:whitesmoke;
-    width: 90%;
+    width: 75%;
     margin: auto;
     min-height: 1050px;
-
+    margin: 0 auto;
+    border-radius: 4px;
+    padding: 10px;
+    padding-top: 20px;
+    font-size: 25px;
+    font-family: 'Raleway';
 }
+
+    
