--- a/style.css
+++ b/style.css
@@ -16,21 +16,15 @@ body {
     font-family: 'Raleway';
 }
 
-#name-label, #email-label, #number-label {
+.mylabels {
     display: inline-block;
     text-align: right;
-    width: 5%;
-    padding-right: 10px;
-}
-
-#gender-label{
-    display: inline-block;
-    text-align: right;
-    width: 5%;
-    padding-right: 65px;
-}
-
-
+    width: 10%;
+    padding: 5px;
+    vertical-align: top;
+    margin-top: 10px;
+  }
+  
 
 .input-field {
     height: 20px;
@@ -40,4 +34,6 @@ body {
     border: 1px solid #c0c0c0;
     border-radius: 2px;
   }
+
+  
   
