--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
 .mylabels {
     display: inline-block;
     text-align: right;
-    width: 10%;
-    padding: 5px;
+    width: 45%;
+    padding-right: 50px;
     vertical-align: top;
     margin-top: 10px;
   }
