--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
 .mylabels {
     display: inline-block;
     text-align: right;
-    width: 45%;
-    padding-right: 50px;
+    width: 40%;
+    padding: 5px;
     vertical-align: top;
     margin-top: 10px;
   }
@@ -35,5 +35,10 @@ body {
     border-radius: 2px;
   }
 
-  
+  .rightfunction {
+    display: inline-block;
+    text-align: left;
+    width: 40%;
+    vertical-align: middle;
+  }
   
