--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     text-align: left;
     width: 40%;
     vertical-align: middle;
+    padding-top: 20px;
   }
 
   .input-field {
@@ -49,4 +50,13 @@ body {
     width: 95px;
     margin: 15px;
     border: 0px solid;
+  }
+.barsize {
+    height: 40px;
+    width: 160px;
+    padding: 2px;
+    margin: 5px;  
+    margin-top: 5px;
+    border: 1px solid #c9c9c9;
+    border-radius: 2px;
   }
