--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body {
-    background-color: #e9ebe5;
+    background-color: #0fc4fc;
     text-align: center;
+    font-size: 25px;
 }
 
 .mysurvey {
+    background-image: url('image/sky.jpg');
+    background-repeat: repeat-x;
     background-color:whitesmoke;
     width: 75%;
     margin: auto;
@@ -42,7 +45,7 @@ body {
   }
 
   #submit {
-    background-color: #59ace0;
+    background-color: #2eabf3;
     border-radius: 4px;
     color: white;
     font-size: 1em;
